Extrude along normals operator displays wrong status bar values #85378

Closed
opened 2021-02-04 15:57:40 +01:00 by Ludvik Koutny · 8 comments
Contributor

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09

Blender Version
Broken: version: 2.91.0, branch: master (modified), commit date: 2020-11-25 11:06, hash: b50598bc78
Worked: (newest version of Blender that worked as expected)

Short description of error
When using extrude along normals operator, the extrude distance in the status bar is not displayed in the specified length units, so when the user tries to specify the values by typing in the exact number, that number does not match the status bar distance.

Observe the video - when I reach the desired distance using mouse movement (around 0.4), I want to make it exact by typing in 0.4, however this ends up being completely different distance. At the end of the video, you can see me using the regular extrude, not "along normals" one, and that one correctly displays units in centimeters.
2021-02-04_15-52-57.mp4

Exact steps for others to reproduce the error

  1. Open a .blend file containing any geometry
  2. Execute extrude along normals on any faces of the geometry and drag it to roughly desired distance
  3. Attempt to make that distance more precise by typing it on the numpad
    Result: The precise distance typed on the numpad is in different scale than the status bar displayed distance prior to start of the type in
    Expected: The distance displayed in the status bar uses the same scale as the type in distance
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09 **Blender Version** Broken: version: 2.91.0, branch: master (modified), commit date: 2020-11-25 11:06, hash: `b50598bc78` Worked: (newest version of Blender that worked as expected) **Short description of error** When using extrude along normals operator, the extrude distance in the status bar is not displayed in the specified length units, so when the user tries to specify the values by typing in the exact number, that number does not match the status bar distance. Observe the video - when I reach the desired distance using mouse movement (around 0.4), I want to make it exact by typing in 0.4, however this ends up being completely different distance. At the end of the video, you can see me using the regular extrude, not "along normals" one, and that one correctly displays units in centimeters. [2021-02-04_15-52-57.mp4](https://archive.blender.org/developer/F9631109/2021-02-04_15-52-57.mp4) **Exact steps for others to reproduce the error** 1. Open a .blend file containing any geometry 2. Execute extrude along normals on any faces of the geometry and drag it to roughly desired distance 3. Attempt to make that distance more precise by typing it on the numpad Result: The precise distance typed on the numpad is in different scale than the status bar displayed distance prior to start of the type in Expected: The distance displayed in the status bar uses the same scale as the type in distance
Author
Contributor

Added subscriber: @Rawalanche

Added subscriber: @Rawalanche
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Falk David self-assigned this 2021-02-04 17:17:28 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this issue on the latest alpha. I will look into this.

I can confirm this issue on the latest alpha. I will look into this.

This issue was referenced by eccc57aa5c

This issue was referenced by eccc57aa5c791009634ffe8a1e41472ce02317f5
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Contributor

@filedescriptor

Just a note that the exact same issue happens also in case of Inset operator.

@filedescriptor Just a note that the exact same issue happens also in case of Inset operator.
Member

@Rawalanche Please open it as a new report to keep things organized (you can add me as a subscriber).

@Rawalanche Please open it as a new report to keep things organized (you can add me as a subscriber).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85378
No description provided.