Fix T85378: Shrink/Fatten display number units

Currently the displayed distance when using the shrink/fatten transform
operator does not respect the scene units (they would always be in
blender units).

This changes makes sure the number is displayed in the correct unit.

Maniphest Tasks: T85378

Differential Revision: https://developer.blender.org/D10325